jaeger/jaeger-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  labels:
    app: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:1.62.0
          ports:
            - containerPort: 5775
            - containerPort: 6831
            - containerPort: 6832
            - containerPort: 5778
            - containerPort: 14250
            - containerPort: 14268
            - containerPort: 16686
          args:
            - "--reporter.type=grpc"
            - "--reporter.grpc.host-port=jaeger-collector:14250"
            - "--query.base-path=/jaeger"
