jaeger/jaeger-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 16686
      targetPort: 16686
    - name: grpc
      port: 14250
      targetPort: 14250
  selector:
    app: jaeger
